--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Site de recettes inspirées du cinéma",
   "main": "server.js",
   "scripts": {
+    "init-db": "node scripts/initDb.js",
+    "reseed": "node scripts/reseed.js",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -12,7 +14,8 @@
     "ejs": "^3.1.9",
     "pg": "^8.11.3",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
+    "sequelize": "^6.35.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
