--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "cine-delices",
   "version": "1.0.0",
   "description": "Site de recettes inspirées du cinéma",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "init-db": "node scripts/initDb.js",
     "reseed": "node scripts/reseed.js",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
