--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "init-db": "node scripts/initDb.js",
     "reseed": "node scripts/reseed.js",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "setup": "npm run init-db && npm run dev"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -21,4 +22,4 @@
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-} 
+}
