Docker compose : Indentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,22 @@
-# docker-compose est un fichier au format YAML
-# qui contient toutes les informations / instructions pour :
-#  - créer les images d'un projet
-#  - créer les conteneurs d'un projet
-#  - indiquer les différentes contraintes pour les conteneurs
-#  - lier / ordonner les conteneurs
-#
-# Chaque conteneur est considéré comme un service
-# qui permet de faire tourner l'application.
-#
-# L'instruction de base d'un fichier docker-compose est :
 services:
-  # notre premier service, c'est notre application (partie applicative)
-  # on peut directement lui donner un nom de service (ici app)
-  app:
-    # on indique comment construire l'image du service.
-    # On a déjà un Dockerfile pour la partie applicative :
-    # on peut le réutiliser.
-    # On indique que la construction de l'image se fait
-    # à partir du Dockerfile déjà écrit.
+
+  # nom du service sur le réseau docker => server:3000
+  cinedelices-app:
+    container_name: cinedelices-app
+
+    # informations relatives à l'image (=> construire une image Docker à partir de notre code pour pouvoir ensuite le faire tourner dans un conteneur)
     build:
+      # le répertoire de build du projet
       context: .
+      # le nom du Dockerfile
       dockerfile: Dockerfile
+
     # on déclare que le service doit être accessible sur le port
     # 3000 de l'hôte qui correspond au port 3000 du conteneur.
     # C'est l'équivalent de l'option -p de docker run
     ports:
       # port-hôte:port-conteneur
       - 3000:3000
-    # on peut donner un nom au conteneur qui sera créé
-    # C'est l'équivalent de l'option --name de docker run
-    container_name: cinedelices-app
 
     volumes:
       - .:/app
@@ -52,7 +39,6 @@ services:
     # on peut donner directement des instructions de construction :
     # on utilise l'image postgres pour ce service, 
     # on n'est pas obligé de passer par un Dockerfile
-
     image: postgres:17
     container_name: cinedelices-db
 
