--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "setup": "npm run init-db && npm run dev"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9",
-    "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
     "bcrypt": "^5.1.1",
-    "sequelize": "^6.35.2",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
