--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "memorystore": "^1.6.7",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
   },
