--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "reseed": "node scripts/reseed.js",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "setup": "npm run init-db && npm run dev"
+    "setup": "npm run init-db && npm run start",
+    "setup-dev": "npm run init-db && npm run dev"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -21,6 +22,6 @@
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.9"
   }
 }
