--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "memorystore": "^1.6.7",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
   },
