--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,21 +4,18 @@
 FROM node:20-alpine
 
 # Installer bash
-RUN apk add --no-cache bash
+RUN apk add --no-cache curl bash
 
 # créer un répertoire de travail et s'y déplacer
 WORKDIR /cinedelices
 
 # on récupère le package.json depuis le dossier de build (./ => "server" => le "context" dans mon docker-compose)
-COPY ./package.json /cinedelices/
+COPY ./package*.json /cinedelices/
 
 RUN npm i
 # on a besoin de nodemon pour relancer
 # automatiquement le serveur en dev
 RUN npm i -g nodemon
-
-# Installer Biome avec version exacte
-RUN npm install --save-dev --save-exact @biomejs/biome
 
 COPY . /cinedelices/
 
