--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Site de recettes inspirées du cinéma",
   "main": "app.js",
   "scripts": {
+    "biome": "biome",
+    "format": "biome format",
+    "lint": "biome lint",
     "init-db": "node scripts/initDb.js",
     "reseed": "node scripts/reseed.js",
     "start": "node app.js",
@@ -20,6 +23,7 @@
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "nodemon": "^3.1.9"
   }
 }
