--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "init-db": "node scripts/initDb.js",
     "reseed": "node scripts/reseed.js",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -31,6 +34,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "nodemon": "^3.1.9"
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^6.3.4"
   }
 }
