--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "tailwindcss": "^3.4.17"
   }
 }
