--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "reseed": "node scripts/reseed.js",
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "build:css": "npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --minify",
+    "dev:css": "npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --watch",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
+
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
