feat:[prod]: modif du start-dev.sh en config-dev.sh et ajout du script config-prod.sh pour automatiser l'installation, la compilation de Tailwind CSS et le lancement du serveur en production

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -34,7 +34,7 @@ services:
     env_file:
       - .env.docker-compose
 
-    command: [ "bash", "-c", "./start-dev.sh" ]
+    command: [ "bash", "-c", "./config-dev.sh" ]
 
     restart: always
 
