feat:[prod]: ajout de la commande config-prod dans docker-compose.prod

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,7 +32,7 @@ services:
     env_file:
       - .env.docker-compose
 
-    command: npm run setup
+    command: [ "bash", "-c", "./config-prod.sh" ]
 
   # service pour la base de données
   db:
