♻️  Refactorisation des scripts npm et .sh, des Dockerfile, docker-compose et .dockerignore pour une meilleure gestion de Tailwind en production

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,34 @@
 # Dans le .dockerignore on peut indiquer
 # des dossiers ou fichiers qui doivent être ignorés par Docker
-
 attendus
-node_modules
 README.md
 structure_des_dossiers
+
+# Ignorer les dépendances installées localement
+node_modules/
+npm-debug.log
+
+# Ignorer les fichiers et dossiers spécifiques à Git
+.git
+.gitignore
+
+# Ignorer les fichiers de logs et de build
+logs/
+*.log
+public/CSS/input.css  # ⚠️ On ignore le fichier source de Tailwind
+!public/CSS/output.css  # ✅ On garde le fichier généré en production
+
+# Ignorer les fichiers de configuration et secrets sensibles
+.env
+.env.example
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Ignorer les fichiers Docker inutiles
+.dockerignore
+Dockerfile.dev
+Dockerfile.prod
+docker-compose.dev.yml
+docker-compose.prod.yml
