--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "biome lint",
     "init-db": "node scripts/initDb.js",
     "reseed": "node scripts/reseed.js",
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "NODE_ENV=production node app.js",
+    "dev": "NODE_ENV=development nodemon app.js",
     "dev:css": "npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --watch",
     "setup-dev": "node scripts/initDb.js & npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --watch",
     "build:css": "npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --minify",
-    "setup-prod": "node scripts/initDb.js & npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --minify",
-    "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
 
