--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,9 @@
 # Dans le .dockerignore on peut indiquer
 # des dossiers ou fichiers qui doivent être ignorés par Docker
 attendus
-README.md
 structure_des_dossiers
+*.md
+.vscode/
 
 # Ignorer les dépendances installées localement
 node_modules/
@@ -20,15 +21,19 @@ public/CSS/input.css  # ⚠️ On ignore le fichier source de Tailwind
 
 # Ignorer les fichiers de configuration et secrets sensibles
 .env
-.env.example
-.env.local
-.env.development
+.env.dev
+.env.docker-compose.dev.example
+.env.docker-compose.prod.example
 .env.test
-.env.production
+
 
 # Ignorer les fichiers Docker inutiles
 .dockerignore
 Dockerfile.dev
-Dockerfile.prod
 docker-compose.dev.yml
-docker-compose.prod.yml
+docker-compose.override.yml
+
+# Ignorer les tests en production
+tests/
+coverage/
+jest.config.js
