--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dev:css": "npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --watch",
     "setup-dev": "node scripts/initDb.js & npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --watch",
     "build:css": "npx tailwindcss -i ./public/CSS/input.css -o ./public/CSS/output.css --minify",
+    "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
-
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
